--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,69 +10,9 @@
   "categories": ["productivity", "developer", "portfolio"],
   "lang": "en",
   "dir": "ltr",
-  "icons": [
-    {
-      "src": "/favicon.ico",
-      "sizes": "16x16 32x32",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshot-desktop.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Desktop view of Nebula portfolio editor"
-    },
-    {
-      "src": "/screenshot-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Mobile view of Nebula portfolio gallery"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "Template Gallery",
-      "short_name": "Gallery",
-      "description": "Browse portfolio templates",
-      "url": "/gallery",
-      "icons": [
-        {
-          "src": "/icon-gallery.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
-    },
-    {
-      "name": "Editor",
-      "short_name": "Editor",
-      "description": "Edit your portfolio",
-      "url": "/editor",
-      "icons": [
-        {
-          "src": "/icon-editor.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
-    }
-  ],
+  "icons": [],
+  "screenshots": [],
+  "shortcuts": [],
   "related_applications": [
     {
       "platform": "web",
