--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "next lint",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:integration": "node scripts/test-integration.js",
-    "test:e2e": "node scripts/end-to-end-integration-test.js",
+    "test:unit": "node lib/__tests__/test-runner.js unit",
+    "test:integration": "node lib/__tests__/test-runner.js integration",
+    "test:e2e": "node lib/__tests__/test-runner.js e2e",
+    "test:performance": "node lib/__tests__/test-runner.js performance",
+    "test:comprehensive": "node lib/__tests__/test-runner.js",
+    "test:legacy:integration": "node scripts/test-integration.js",
+    "test:legacy:e2e": "node scripts/end-to-end-integration-test.js",
     "test:workflow": "node scripts/workflow-validation.js",
     "test:system": "node scripts/system-integration-test.js",
     "test:all": "node scripts/run-all-integration-tests.js",
     "validate:integration": "node scripts/validate-integration.js",
+    "validate:production": "node scripts/setup-production.js",
     "setup-github": "node scripts/setup-github-oauth.js",
     "validate-github-config": "node scripts/validate-github-config.js"
   },
